# HYPE

./: .clang-format  .gitignore  CMakeLists.txt  LICENSE  README.md  build.sh  main.cpp
include/: Hypergraph.hpp  Parsing.hpp  Partition.hpp  Partitioning.hpp  SSet.hpp
src/: Hypergraph.cpp  Parsing.cpp  Partition.cpp  Partitioning.cpp  SSet.cpp
